Commented out code related to decimal conversion in DNA.py and mutation in Cromosoma.py

--- a/TP3/AlgoritmoGenetico/Main_TP3.ipynb
+++ b/TP3/AlgoritmoGenetico/Main_TP3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,14 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     " \n",
     "\n",
     "def get_distance(city1: str, city2: str) -> float:\n",
-    "    return tabla[lista_provincias.index(city1)][lista_provincias.index(city2) +1]\n"
+    "    return tabla[city1][city2]\n",
+    "#\n",
+    "    # return tabla[lista_provincias.index(city1)][lista_provincias.index(city2) +1]\n"
    ]
   },
   {
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,27 +170,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Cromosoma' object has no attribute 'decimal'",
+     "ename": "ValueError",
+     "evalue": "20 is not in list",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
       "\u001b[1;32mc:\\Users\\Francisco Mendiburu\\Documents\\algoritmos-geneticos\\TP3\\AlgoritmoGenetico\\Main_TP3.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# poblaciones = []\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# poblaciones.append(poblacion)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(ciclos):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     nueva_poblacion \u001b[39m=\u001b[39m ciclo(poblacion,funcion_objetivo,fitness,i)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     poblacion \u001b[39m=\u001b[39m nueva_poblacion\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     \u001b[39m# poblaciones.append(poblacion)    \u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     \u001b[39m# print(f'-----------{i}------------')\u001b[39;00m\n",
       "\u001b[1;32mc:\\Users\\Francisco Mendiburu\\Documents\\algoritmos-geneticos\\TP3\\AlgoritmoGenetico\\Main_TP3.ipynb Cell 12\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m DNA1 \u001b[39m=\u001b[39m  DNA(poblacion)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m elites \u001b[39m=\u001b[39m []\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m res_objetivo \u001b[39m=\u001b[39m DNA1\u001b[39m.\u001b[39;49mcalcular_objetivo(fObjetivo)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m res_fitness \u001b[39m=\u001b[39m DNA1\u001b[39m.\u001b[39mcalcular_fitness(fFitness)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m almacenar_informacion(DNA1)\n",
-      "File \u001b[1;32mc:\\Users\\Francisco Mendiburu\\Documents\\algoritmos-geneticos\\TP3\\AlgoritmoGenetico\\DNA.py:53\u001b[0m, in \u001b[0;36mDNA.calcular_objetivo\u001b[1;34m(self, funcion)\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcalcular_objetivo\u001b[39m(\u001b[39mself\u001b[39m,funcion):\n\u001b[0;32m     52\u001b[0m     \u001b[39mfor\u001b[39;00m cromosoma \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpoblacion:\n\u001b[1;32m---> 53\u001b[0m         objetivo \u001b[39m=\u001b[39m funcion(\u001b[39mint\u001b[39m(cromosoma\u001b[39m.\u001b[39;49mdecimal))\n\u001b[0;32m     54\u001b[0m         cromosoma\u001b[39m.\u001b[39mobjetivo \u001b[39m=\u001b[39m objetivo\n\u001b[0;32m     56\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobjetivo[\u001b[39m\"\u001b[39m\u001b[39mSuma\u001b[39m\u001b[39m\"\u001b[39m]  \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([cromosoma\u001b[39m.\u001b[39mobjetivo \u001b[39mfor\u001b[39;00m cromosoma \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpoblacion])\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Cromosoma' object has no attribute 'decimal'"
+      "File \u001b[1;32mc:\\Users\\Francisco Mendiburu\\Documents\\algoritmos-geneticos\\TP3\\AlgoritmoGenetico\\DNA.py:59\u001b[0m, in \u001b[0;36mDNA.calcular_objetivo\u001b[1;34m(self, funcion)\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[39mfor\u001b[39;00m posicion \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m,\u001b[39mlen\u001b[39m(cromosoma\u001b[39m.\u001b[39mgenes)\u001b[39m-\u001b[39m\u001b[39m2\u001b[39m):\n\u001b[0;32m     58\u001b[0m     ciudad_A,ciudad_B \u001b[39m=\u001b[39m cromosoma\u001b[39m.\u001b[39mgenes[posicion],cromosoma\u001b[39m.\u001b[39mgenes[posicion\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[1;32m---> 59\u001b[0m     distancia_ciudades \u001b[39m=\u001b[39m funcion(ciudad_A,ciudad_B) \n\u001b[0;32m     60\u001b[0m     distancia_total \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m distancia_ciudades\n\u001b[0;32m     62\u001b[0m cromosoma\u001b[39m.\u001b[39mobjetivo \u001b[39m=\u001b[39m distancia_total\n",
+      "\u001b[1;32mc:\\Users\\Francisco Mendiburu\\Documents\\algoritmos-geneticos\\TP3\\AlgoritmoGenetico\\Main_TP3.ipynb Cell 12\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m ciclos \u001b[39m=\u001b[39m \u001b[39m200\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m cantidad_cromosomas \u001b[39m=\u001b[39m \u001b[39m50\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m funcion_objetivo \u001b[39m=\u001b[39m \u001b[39mlambda\u001b[39;00m x,y: get_distance(x,y)       \u001b[39m#  esto tiene que devolver la distancia, no?\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m fitness \u001b[39m=\u001b[39m \u001b[39mlambda\u001b[39;00m obj,sum_obj: obj\u001b[39m/\u001b[39msum_obj   \u001b[39m# distancia total?\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m Cromosoma\u001b[39m.\u001b[39msetProbMutacion(\u001b[39m0.05\u001b[39m)\n",
+      "\u001b[1;32mc:\\Users\\Francisco Mendiburu\\Documents\\algoritmos-geneticos\\TP3\\AlgoritmoGenetico\\Main_TP3.ipynb Cell 12\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_distance\u001b[39m(city1: \u001b[39mstr\u001b[39m, city2: \u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mfloat\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Francisco%20Mendiburu/Documents/algoritmos-geneticos/TP3/AlgoritmoGenetico/Main_TP3.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m tabla[lista_provincias\u001b[39m.\u001b[39;49mindex(city1)][lista_provincias\u001b[39m.\u001b[39mindex(city2) \u001b[39m+\u001b[39m\u001b[39m1\u001b[39m]\n",
+      "\u001b[1;31mValueError\u001b[0m: 20 is not in list"
      ]
     }
    ],
    "source": [
     "ciclos = 200\n",
     "cantidad_cromosomas = 50\n",
-    "funcion_objetivo = lambda x,y: get_distance(x,y)      #  esto tiene que devolver la distancia, no?\n",
+    "funcion_objetivo = lambda x,y: get_distance(x,y)       #  esto tiene que devolver la distancia, no?\n",
     "fitness = lambda obj,sum_obj: obj/sum_obj   # distancia total?\n",
     "Cromosoma.setProbMutacion(0.05)\n",
     "Cromosoma.setProbCrossover(0.75)\n",
